--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -14,6 +14,7 @@
     }
     input[type="checkbox"] + img {
         display: inline-block;
+        cursor: pointer;
         vertical-align: middle;
     }
     input[type="checkbox"] + img + img {
@@ -24,9 +25,17 @@
     }
     input[type="checkbox"]:checked + img + img {
         display: inline-block;
+        cursor: pointer;
         vertical-align: middle;
     }
 }
 #evasys_evaldata {
     margin-top: 10px;
+}
+
+.bulkedit tbody tr {
+    opacity: 0.5;
+}
+.bulkedit tbody tr.active {
+    opacity: 1;
 }
