--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -1,5 +1,6 @@
 .evasys_teachers {
     .avatar {
+        cursor: grabbing;
         display: inline-block;
         width: 35px;
         height: 35px;
@@ -28,13 +29,25 @@
         cursor: pointer;
         vertical-align: middle;
     }
+    .note {
+        opacity: 0;
+        transition: opacity 500ms;
+    }
+    > :first-child .note {
+        opacity: 0.5;
+        transition: opacity 500ms;
+    }
+}
+.evasys_propose_dates {
+    max-height: 200px;
+    overflow: auto;
 }
 #evasys_evaldata {
     margin-top: 10px;
 }
 
 .bulkedit tbody tr {
-    opacity: 0.5;
+    opacity: 0.6;
 }
 .bulkedit tbody tr.active {
     opacity: 1;
