--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -63,3 +63,20 @@
 .bulkedit tbody tr.active {
     opacity: 1;
 }
+
+ul.sortforms {
+    margin-top: 15px;
+    > li {
+        margin-bottom: 10px;
+    }
+    .mover {
+        vertical-align: middle;
+        padding-right: 10px;
+        padding-left: 10px;
+        padding-top: 10px;
+        cursor: grabbing;
+    }
+    .description {
+        opacity: 0.7;
+    }
+}
