--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -48,6 +48,13 @@
     &.split .note {
         opacity: 0.5;
     }
+    > .ui-sortable-helper {
+        margin-top: -35px;
+    }
+    > .ui-sortable-placeholder {
+        padding-top: 2px;
+        padding-bottom: 3px;
+    }
 }
 .evasys_propose_dates {
     max-height: 200px;
