--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -1,4 +1,9 @@
 .evasys_teachers {
+    .anfasser {
+        vertical-align: middle;
+        cursor: grabbing;
+        margin-right: 5px;
+    }
     .avatar {
         display: inline-block;
         width: 35px;
@@ -19,23 +24,6 @@
         input[type="checkbox"]:checked + img + img {
             cursor: pointer;
         }
-    }
-    input[type="checkbox"] {
-        display: none;
-    }
-    input[type="checkbox"] + img {
-        display: inline-block;
-        vertical-align: middle;
-    }
-    input[type="checkbox"] + img + img {
-        display: none;
-    }
-    input[type="checkbox"]:checked + img {
-        display: none;
-    }
-    input[type="checkbox"]:checked + img + img {
-        display: inline-block;
-        vertical-align: middle;
     }
     .note {
         opacity: 0;
