--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -15,7 +15,7 @@
         vertical-align: middle;
     }
     &.editable {
-        .avatar {
+        &.ui-sortable .avatar {
             cursor: grabbing;
         }
         input[type="checkbox"] + img {
