fix order of teachers by bulkedit

--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -75,3 +75,19 @@ ul.sortforms {
         opacity: 0.7;
     }
 }
+
+#qr_code_evasys {
+    display: none;
+}
+#qr_code_evasys:-moz-full-screen {
+    display: flex;
+}
+#qr_code_evasys:-webkit-full-screen {
+    display: flex;
+}
+#qr_code_evasys:-ms-fullscreen {
+    display: flex;
+}
+#qr_code_evasys:fullscreen {
+    display: flex;
+}
