add multiple semester support for courses

--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -150,3 +150,15 @@ ul.sortforms {
 .text-middle {
     vertical-align: middle;
 }
+
+.evasys_profile_checkbox {
+    display: flex; justify-content: space-between; align-items: center;
+    > .semester {
+        opacity: 0.5;
+        margin-right: 5px;
+    }
+    > .controls {
+        text-align: right;
+        width: 100%;
+    }
+}
