--- a/assets/evasys.less
+++ b/assets/evasys.less
@@ -167,3 +167,26 @@ table.default.up {
         vertical-align: top;
     }
 }
+
+.messagebox .evasys_legend {
+    border-bottom: solid 1px black;
+}
+
+.evasysmessagebox {
+    border: 1px solid @content-color-40;
+    padding: 15px;
+    .legend {
+        background-color: @content-color-20;
+        margin-left: -15px;
+        margin-right: -15px;
+        margin-top: -15px;
+        margin-bottom: 10px;
+        padding-top: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid @content-color-40;
+        color: @base-color;
+        font-weight: bold;
+    }
+}
